# UMAMI

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  Pipfile  Procfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
guildmaster/: __init__.py  admin.py  apps.py  conf.py  core.py  drivers.py  exceptions.py  forms.py  models.py  requests.py  urls.py  utils.py  views.py  workflows.py
guildmaster/adapters/: __init__.py  base.py  battle_net.py  discord.py  eve_online.py  oauth2.py
guildmaster/fixtures/: test.json
guildmaster/migrations/: 0001_initial.py  0002_account.py  0002_discordaccount.py  0002_token_resource.py  0002_token_resource_tag.py  0003_discordaccount.py
guildmaster/models/: __init__.py  accounts.py  clients.py  common.py  mixins.py  oauth2.py  providers.py  tokens.py
guildmaster/templates/: client_dump.html
guildmaster/tests/: conftest.py  test_core.py  test_drivers.py  test_exceptions.py  test_models.py  test_oauth2.py  test_providers.py  test_requests.py  test_urls.py  test_utils.py  test_views.py  test_workflows.py
guildmaster/views/: __init__.py  auth.py  discord.py
oauth2/: admin.py  apps.py  auth.py  conf.py  core.py  drivers.py  exceptions.py  models.py  requests.py  urls.py  utils.py  views.py  workflows.py
oauth2/migrations/: 0001_initial.py  0002_auto_20181221_2045.py  0002_auto_20190210_1144.py
oauth2/templates/: client_dump.html
oauth2/tests/: conftest.py  test_auth.py  test_client_model.py  test_client_models.py  test_core.py  test_drivers.py  test_exceptions.py  test_models.py  test_requests.py  test_token_model.py  test_urls.py  test_utils.py  test_views.py  test_workflows.py
redirect/: __init__.py  admin.py  apps.py  conf.py  middleware.py  models.py
redirect/migrations/: 0001_initial.py
umami/: __init__.py  admin.py  conf.py  models.py  settings.py  urls.py  views.py
(+41 files in other folders)
